added complex data structure question to the end

--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "04-collections.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvrrpd5D3IuF+H88k6kMM0",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNQbbGXVMGM4j5f+lyDZWLY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -903,6 +904,107 @@
         "We aren't going to cover Python Sets in COMP1010. If you are interested in this form of collection, I recommend:\n",
         "* [W3Schools Sets](https://www.w3schools.com/python/python_sets.asp)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JEat-wKwBNdb"
+      },
+      "source": [
+        "# 6 - Complex Data Structures"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cFRa9VbmAtZ2"
+      },
+      "source": [
+        "## 1 - House Hunting\n",
+        "\n",
+        "The following cell defines a list of houses for sale. It includes their address, number of bedrooms and bathrooms, price, and features (garage, pool, granny flat, etc.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DyUHH3tCBQSa"
+      },
+      "source": [
+        "houses = [\n",
+        "    { \n",
+        "        \"address\": \"42 Wallaby Way, Sydney\", \n",
+        "        \"bedrooms\": 3, \n",
+        "        \"bathrooms\": 2, \n",
+        "        \"features\": [\"garage\", \"pool\"] \n",
+        "    },\n",
+        "    { \n",
+        "        \"address\": \"123 Fake Street, Mosman\", \n",
+        "        \"bedrooms\": 6, \n",
+        "        \"bathrooms\": 3, \n",
+        "        \"features\": [\"pool\", \"granny flat\"]     \n",
+        "    },\n",
+        "    { \n",
+        "        \"address\": \"1 High Street, Kensington\", \n",
+        "        \"bedrooms\": 2, \n",
+        "        \"bathrooms\": 1, \n",
+        "        \"features\": [] \n",
+        "    },\n",
+        "    { \n",
+        "        \"address\": \"109 Kirribilli Ave, Kirribilli\", \n",
+        "        \"bedrooms\": 10, \n",
+        "        \"bathrooms\": 7, \n",
+        "        \"features\": [\"garage\", \"pool\", \"wine cellar\", \"tennis court\"] \n",
+        "    }\n",
+        "]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m_5f5IK_BSti"
+      },
+      "source": [
+        "\n",
+        "Write the function `find_houses(houses, bedrooms, bathrooms, features)` that returns a list of the addresses of all the houses with at least the given number of bedrooms and bathrooms and at least the given list of features.\n",
+        "\n",
+        "**NOTE:** Don't assume the list of houses or set of possible features is constrained to what is written above. Your function should still work if new houses were added to the above list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zMpFumJHB7QS"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YzC7pPTXBmrA"
+      },
+      "source": [
+        "Use this cell to test your function:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ToutMRHgBpSJ"
+      },
+      "source": [
+        "assert find_houses(houses, 3, 1, [\"garage\"]) == [\"42 Wallaby Way, Sydney\", \"109 Kirribilli Ave, Kirribilli\"]\n",
+        "assert find_houses(houses, 6, 4, []) == [\"109 Kirribilli Ave, Kirribilli\"]\n",
+        "assert find_houses(houses, 1, 1, [\"granny flat\"]) == [\"123 Fake Street, Mosman\"]"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
