added feedback section

--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -6,7 +6,7 @@
       "name": "04-collections.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQbbGXVMGM4j5f+lyDZWLY",
+      "authorship_tag": "ABX9TyNCDqAbEv7aHbFHAdRkUjuR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1005,6 +1005,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1JHlGGzR6AF_"
+      },
+      "source": [
+        "# Feedback (Topic 3.4)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
