--- a/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/05-modules-and-libraries.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05-modules-and-libraries.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTiOz2wvwtT4nM5ev6CHvw",
+      "authorship_tag": "ABX9TyPhZpGlGrwe6u4IdFHRjNy5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,6 +588,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1JHlGGzR6AF_"
+      },
+      "source": [
+        "# Feedback (Topic 3.5)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
