--- a/lectures/03-python-and-programming-fundamentals/scaffold/06-further-topics.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/06-further-topics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "06-further-topics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeMTfCn+Wg47or5SsUEPoV",
+      "authorship_tag": "ABX9TyOiKv6bKzadHjLv8UjgSSel",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -387,6 +387,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1JHlGGzR6AF_"
+      },
+      "source": [
+        "# Feedback (Topic 3.6)\n",
+        "\n",
+        "[https://forms.gle/Uod5Jpr7AJ2z7cHLA](https://forms.gle/Uod5Jpr7AJ2z7cHLA)\n",
+        "\n",
+        "![](https://i.imgur.com/0L50D4L.png)"
+      ]
     }
   ]
 }
