--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -48,7 +48,7 @@
         "\n",
         "## Problem statement\n",
         "\n",
-        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
+        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Don't just describe what your program does. Focus on the purpose of your program. Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
         "\n",
         "## Background\n",
         "\n",
@@ -71,7 +71,9 @@
       "source": [
         "## Demonstration of feasibility\n",
         "\n",
-        "*Describe a core feature of your prototype application and provide a demonstration of how that feature may work in the code cell below (you can add further code cells if you wish). For example, if your application gets data from an external source, write code here that does that so you can demonstrate it is feasible. Similarly, if your application relies on you implementing an algorithm, using a library we haven't covered in the course, or generating images/visualisations, write code here does that.*"
+        "*Describe a core feature of your prototype application and provide a demonstration of how that feature may work in the code cell below (you can add further code cells if you wish). For example, if your application gets data from an external source, write code here that does that so you can demonstrate it is feasible. Similarly, if your application relies on you implementing an algorithm, using a library we haven't covered in the course, or generating images/visualisations, write code here does that.*\n",
+        "\n",
+        "*Your code must compile and run in order to get these marks. If you need to submit this section in an external file, indicate that here.*"
       ]
     },
     {
