--- a/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-collections.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOosF32ny/96qiBaLl95Qwi",
+      "authorship_tag": "ABX9TyNphZHuK3rBgY8M0TzeCkKB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1630,10 +1630,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LEk-D_rQjbTT",
-        "outputId": "88999b5f-cc47-4a51-8a79-070d836dade4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88999b5f-cc47-4a51-8a79-070d836dade4"
       },
       "source": [
         "email_dict = {}\n",
@@ -1667,10 +1667,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8R_2JN1QjeXw",
-        "outputId": "ce357994-ad12-4bdd-aed9-22da60b773b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce357994-ad12-4bdd-aed9-22da60b773b2"
       },
       "source": [
         "domain_pref = {}\n",
@@ -1707,10 +1707,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OAQoSRkGjil0",
-        "outputId": "e5877881-4fe2-4109-dac2-794f5cccd9de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5877881-4fe2-4109-dac2-794f5cccd9de"
       },
       "source": [
         "domain_students = {}\n",
@@ -1791,10 +1791,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3T_M753vGoVT",
-        "outputId": "5070cd1b-89f5-4a02-ecc8-8f9cd74d6f39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5070cd1b-89f5-4a02-ecc8-8f9cd74d6f39"
       },
       "source": [
         "def height_to_rides(height):\n",
@@ -1807,8 +1807,11 @@
         "\n",
         "def user_height_to_rides():\n",
         "    my_height = int(input(\"Enter your height: \"))\n",
-        "    rider_type,num_rides = height_to_rides(my_height)\n",
+        "    result = height_to_rides(my_height)\n",
+        "    print(result)\n",
+        "    rider_type,num_rides = result\n",
         "    print(f\"You are a {rider_type} with access to {num_rides} rides.\")\n",
+        "    #print(f\"You are a {result[0]} with access to {result[1]} rides.\")\n",
         "\n",
         "user_height_to_rides()"
       ],
@@ -1900,7 +1903,7 @@
         "    }\n",
         "]"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1921,9 +1924,25 @@
         "id": "zMpFumJHB7QS"
       },
       "source": [
-        ""
+        "def find_houses(houses, bedrooms, bathrooms, features):\n",
+        "    valid_addresses = []\n",
+        "\n",
+        "    for house in houses:\n",
+        "        # Check the number of bedrooms and bathrooms is enough\n",
+        "        if house['bedrooms'] >= bedrooms and house['bathrooms'] >= bathrooms:\n",
+        "            has_all_features = True\n",
+        "            # For each required feature, check it's in that house's features\n",
+        "            for required_feature in features:\n",
+        "                # Check it's in the list\n",
+        "                if required_feature not in house['features']:\n",
+        "                    has_all_features = False\n",
+        "            if has_all_features:\n",
+        "                # Add it to our list of valid addresses\n",
+        "                valid_addresses.append(house['address'])\n",
+        "\n",
+        "    return valid_addresses"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1945,7 +1964,7 @@
         "assert find_houses(houses, 6, 4, []) == [\"109 Kirribilli Ave, Kirribilli\"]\n",
         "assert find_houses(houses, 1, 1, [\"granny flat\"]) == [\"123 Fake Street, Mosman\"]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
