Fleshing out dictionary question at the end

--- a/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-collections.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNphZHuK3rBgY8M0TzeCkKB",
+      "authorship_tag": "ABX9TyNSaqeRZzlexXYkbJXIeZ1R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1614,7 +1614,7 @@
       "source": [
         "emails = [\"z1234567@student.unsw.edu.au\", \"z7654321@unsw.edu.au\", \"z7891234@ad.unsw.edu.au\", \"z1357924@student.unsw.edu.au\"]"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1637,13 +1637,22 @@
       },
       "source": [
         "email_dict = {}\n",
+        "\n",
+        "'''\n",
+        "{z1234567 : z1234567@student.unsw.edu.au,\n",
+        "...}\n",
+        "'''\n",
+        "\n",
+        "# For each e-mail\n",
         "for email in emails:\n",
+        "    # Extract the zid from the e-mail\n",
         "    zid = email[0:8]\n",
+        "    # Put an entry in the dictionary, with the zid as the key and the email as the value\n",
         "    email_dict[zid] = email\n",
         "\n",
         "print(email_dict)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1674,8 +1683,19 @@
       },
       "source": [
         "domain_pref = {}\n",
+        "\n",
+        "'''\n",
+        "{student.unsw.edu.au : 50,\n",
+        "unsw.edu.au : 2,\n",
+        "ad.unsw.edu.au : 17}\n",
+        "'''\n",
+        "\n",
+        "# For each e-mail\n",
         "for email in emails:\n",
+        "    # Get the domain\n",
         "    domain = email[9:]\n",
+        "    # If the domain is already in our dictionary, add one to the count\n",
+        "    # Otherwise put it in with a count of 1\n",
         "    if domain in domain_pref:\n",
         "        domain_pref[domain] += 1\n",
         "    else:\n",
@@ -1683,7 +1703,7 @@
         "\n",
         "print(domain_pref)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1714,18 +1734,32 @@
       },
       "source": [
         "domain_students = {}\n",
+        "\n",
+        "'''\n",
+        "student.unsw.edu.au : [z1234567, z1357924],\n",
+        "unsw.edu.au : []\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "# For each e-mail\n",
         "for email in emails:\n",
+        "    # Get the zid out of the e-mail\n",
         "    zid = email[0:8]\n",
+        "    # Get the domain out of the e-mail\n",
         "    domain = email[9:]\n",
+        "\n",
+        "    # If the domain isn't already there,\n",
+        "    # Add the domain as a key, and the value is a list with only our current zid in it\n",
         "    if domain not in domain_students:\n",
         "        # create a list with just that zid in it\n",
         "        domain_students[domain] = [zid]\n",
         "    else:\n",
+        "        # Otherwise, append our zid to the list for the domain already in our dictionary.\n",
         "        domain_students[domain].append(zid)\n",
         "\n",
         "print(domain_students)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1815,7 +1849,7 @@
         "\n",
         "user_height_to_rides()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1903,7 +1937,7 @@
         "    }\n",
         "]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1942,7 +1976,7 @@
         "\n",
         "    return valid_addresses"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1964,7 +1998,7 @@
         "assert find_houses(houses, 6, 4, []) == [\"109 Kirribilli Ave, Kirribilli\"]\n",
         "assert find_houses(houses, 1, 1, [\"granny flat\"]) == [\"123 Fake Street, Mosman\"]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
