--- a/tutes-and-labs/04-lab.ipynb
+++ b/tutes-and-labs/04-lab.ipynb
@@ -6,7 +6,7 @@
       "name": "04-lab.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIclZ2R6yu1Wr8g2mEt4Xe",
+      "authorship_tag": "ABX9TyPyVz8xTKWtUSNo+BJkgRZ0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "4-bQg7Ss94X_"
+      },
+      "source": [
+        "# Week 4 Lab:\n",
+        " * Part a: 6 marks (recommended submission in week 4)\n",
+        " * Part b: 3 marks\n",
+        "\n",
+        "**IMPORTANT NOTE** If you're using Colaboratory, make sure you save a copy of these exercises to Google drive by clicking 'Copy to Drive' at the top of the page. Otherwise, your answers will not be saved."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "u2WhDvLUEben"
       },
       "source": [
-        "# Week 4 Lab (9 marks)\n",
-        "\n",
-        "**IMPORTANT NOTE** If you're using Colaboratory, make sure you save a copy of these exercises to Google drive by clicking 'Copy to Drive' at the top of the page. Otherwise, your answers will not be saved."
+        "# Week 4 Lab part a (6 marks)"
       ]
     },
     {
@@ -54,7 +65,7 @@
         "id": "PDGGPQIplTos"
       },
       "source": [
-        "If you haven't already, follow the instructions [here](https://webcms3.cse.unsw.edu.au/COMP1010/21T2/resources/61169) to set up Python and Visual Studio Code on your computer.\n",
+        "If you haven't already, follow the instructions [here](https://hackmd.io/@sim/ByCohmeVF) to set up Python and Visual Studio Code on your computer.\n",
         "\n",
         "This task is worth no marks, but you will need it for this week's lecture and next week's tutorial and lab."
       ]
@@ -649,6 +660,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "69SHbFR79Lac"
+      },
+      "source": [
+        "# Week 4 Lab part b (3 marks)"
+      ]
     },
     {
       "cell_type": "markdown",
