--- a/lectures/03-python-and-programming-fundamentals/scaffold/07-revision.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/07-revision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07-revision.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOATHNVhYnDredavI5Gmcbq",
+      "authorship_tag": "ABX9TyNsNqxxhxLUrwsyP+e+wIul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "id": "ZnhkkTO6OzvS"
       },
       "source": [
-        ""
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -105,22 +105,22 @@
         "id": "xVTTHETQO4np"
       },
       "source": [
-        "assert suitable_restaurants([\n",
+        "assert suitable_restaurants(restaurants, [\n",
         "    { \"maximum_price\": \"$\", \"diet\": [] }\n",
         "    ]) == [\"Billy's Burgers\", \"It's a Thai\"]\n",
-        "assert suitable_restaurants([\n",
+        "assert suitable_restaurants(restaurants, [\n",
         "    { \"maximum_price\": \"$$\", \"diet\": [] }, \n",
         "    { \"maximum_price\": \"$$$\", \"diet\": [\"vegetarian\"] }\n",
         "    ]) == [\"UNSW Restaurant\", \"It's a Thai\"]\n",
-        "assert suitable_restaurants([\n",
+        "assert suitable_restaurants(restaurants, [\n",
         "    { \"maximum_price\": \"$\", \"diet\": [\"gluten-free\"] }, \n",
         "    { \"maximum_price\": \"$\", \"diet\": [\"vegetarian\"] }\n",
         "    ]) == []\n",
-        "assert suitable_restaurants([\n",
+        "assert suitable_restaurants(restaurants, [\n",
         "    { \"maximum_price\": \"$$$\", \"diet\": [] }, \n",
         "    { \"maximum_price\": \"$$$\", \"diet\": [\"gluten-free\"] }\n",
         "    ]) == [\"Harbour Seafood\", \"UNSW Restaurant\"]\n",
-        "assert suitable_restaurants([\n",
+        "assert suitable_restaurants(restaurants, [\n",
         "    { \"maximum_price\": \"$$$\", \"diet\": [\"gluten-free\", \"vegetarian\"] }\n",
         "    ]) == [\"UNSW Restaurant\"]"
       ],
