background added on hidden field

--- a/tutes-and-labs/05-tute.ipynb
+++ b/tutes-and-labs/05-tute.ipynb
@@ -72,7 +72,35 @@
         "id": "jTwfRcjJNil_"
       },
       "source": [
-        "## Flask\n",
+        "## Flask"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLvCWhUxmkW6"
+      },
+      "source": [
+        "### Background\n",
+        "\n",
+        "The following task refers to an HTML element, `hidden field`.\n",
+        "\n",
+        "A hidden field lets web developers include data in a form that cannot be seen or modified by users when a form is submitted.\n",
+        "\n",
+        "(While the value is not displayed to the user in the page's content, it is visible (and can be edited) using any browser's developer tools or \"View Source\" functionality.)\n",
+        "\n",
+        "For this week we are using it to hold the contents of variables we need from one server function to the next.\n",
+        "\n",
+        "Soon in lectures we will learn better ways of accomplishing this.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c1eoWglsmnI8"
+      },
+      "source": [
+        "### Task\n",
         "\n",
         "Before you run the code:\n",
         "1. Go around the class. Each person takes a turn explaining what a line of code does. (A comment does not count as a line of code. You may use the comments to help you figure out what the code does.)\n",
