--- a/tutes-and-labs/10-lab.ipynb
+++ b/tutes-and-labs/10-lab.ipynb
@@ -32,7 +32,8 @@
         "id": "isdUfdAwJLVt"
       },
       "source": [
-        "# Week 10 Lab"
+        "# Week 10 Lab (1 mark)\n",
+        "**Due:** 21st November 23:59:00"
       ]
     },
     {
