--- a/tutes-and-labs/10-lab.ipynb
+++ b/tutes-and-labs/10-lab.ipynb
@@ -32,8 +32,7 @@
         "id": "isdUfdAwJLVt"
       },
       "source": [
-        "# Week 10 Lab (1 mark)\n",
-        "**Due:** 21st November 23:59:00"
+        "# Week 10 Lab (1 mark)"
       ]
     },
     {
@@ -43,6 +42,7 @@
       },
       "source": [
         "## Project Reflections (1 mark)\n",
+        "**Due:** 21st November 23:59:00\n",
         "\n",
         "You're now either finished your projects or nearing the end.\n",
         "\n",
@@ -57,10 +57,15 @@
       "source": [
         "## Practice Exam (0 marks)\n",
         "\n",
+        "**If you'd like confirmation of a successful submission, submit before Thursday 25th November 23:59:00. (End of Stuvac.)** At this point Sim will e-mail each student confirming receipt of submission. If you submit, and don't receive an e-mail by Saturday 27th November 23:59:00, e-mail cs1010@cse.unsw.edu.au to follow up what might have gone wrong.\n",
+        "\n",
         "The main purpose of this task is to help you gain familiarity with the way in which the exam will be run.\n",
         "\n",
         "You will be provided with 3 easy questions which will give you a chance to revise some of the course content, and ensure you know how to complete and submit your exam.\n",
-        "\n"
+        "\n",
+        "Once you've submitted your practice exam, you should receive an e-mail confirming that it has been received. (I will go through the submissions \n",
+        "\n",
+        "TODO: Sim to finish releasing this."
       ]
     }
   ]
