--- a/tutes-and-labs/10-lab.ipynb
+++ b/tutes-and-labs/10-lab.ipynb
@@ -57,13 +57,15 @@
       "source": [
         "## Practice Exam (0 marks)\n",
         "\n",
-        "**If you'd like confirmation of a successful submission, submit before Thursday 25th November 23:59:00. (End of Stuvac.)** At this point Sim will e-mail each student confirming receipt of submission. If you submit, and don't receive an e-mail by Saturday 27th November 23:59:00, e-mail cs1010@cse.unsw.edu.au to follow up what might have gone wrong.\n",
-        "\n",
         "The main purpose of this task is to help you gain familiarity with the way in which the exam will be run.\n",
         "\n",
-        "You will be provided with 3 easy questions which will give you a chance to revise some of the course content, and ensure you know how to complete and submit your exam.\n",
+        "You will be provided with some easy sample exam questions which will give you a chance to revise some of the course content, and ensure you know how to complete and submit your exam.\n",
         "\n",
-        "Once you've submitted your practice exam, you should receive an e-mail confirming that it has been received. (I will go through the submissions \n",
+        "**Submit by:** Thursday 25th November 23:59:00\n",
+        "\n",
+        "**Sim e-mail confirmation by:** Saturday 27th November 23:59:00\n",
+        "\n",
+        "The confirmation will include a copy of what was successfully submitted.\n",
         "\n",
         "TODO: Sim to finish releasing this."
       ]
