--- a/tutes-and-labs/10-tute.ipynb
+++ b/tutes-and-labs/10-tute.ipynb
@@ -38,12 +38,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "6dw7JmLCvzaZ"
+      },
+      "source": [
+        "## myExperience\n",
+        "\n",
+        "Please take 10 minutes to fill out the myExperience forms for this course. (on Moodle)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vkozy5nUhhD_"
       },
       "source": [
-        "## Kahoot\n",
+        "## Big Kahoot\n",
         "\n",
-        "Your tutor will run through a Kahoot covering many topics from the whole course."
+        "Your tutor will run through a Kahoot with you to test how well you remember certain concepts from the course."
       ]
     },
     {
